--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: norrisaftcc's homepage
-description: GitHub Pages example for promoting a project
-github_username: norrisaftcc
+title: Insanitykid2879's homepage
+description: Get ready to re-experience 
+github_username: Insanitykid2879
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
