--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Insanitykid2879's homepage
-description: Get ready to re-experience 
+description: Get ready to re-experience the Math adventure all over again....
 github_username: Insanitykid2879
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
